RESOLVED FIXED16334
REGRESSION (r28299): Homepage of any DotMac Web Gallery won't load completely
https://bugs.webkit.org/show_bug.cgi?id=16334
Summary REGRESSION (r28299): Homepage of any DotMac Web Gallery won't load completely
Vincent Gasseling
Reported 2007-12-06 16:13:40 PST
The homepage of any gallery.mac.com-site won't load completely, only a couple of placeholders do appear. If you click on a placeholder and then after the next page has loaded go back via 'Emily's Web Gallery' (left top) to the homepage it will load, but then after a reload again only a couple of placeholders will appear.
Attachments
Test case (1012 bytes, text/html)
2007-12-07 08:59 PST, mitz
no flags
Avoid re-entering scheduleRelayoutOfSubtree() (10.37 KB, patch)
2007-12-07 09:57 PST, mitz
darin: review+
David Kilzer (:ddkilzer)
Comment 1 2007-12-06 20:52:18 PST
Confirmed with a local debug build of WebKit r28483 with Safari 3.0.4 (523.12) on Mac OS X 10.4.11 (8S165). This is a regression from Safari 3.0.4 (523.12) with original WebKit on Tiger.
David Kilzer (:ddkilzer)
Comment 2 2007-12-06 21:38:27 PST
Searching internal builds, this regressed from r28298 to r28299. http://trac.webkit.org/projects/webkit/changeset/28299
David Kilzer (:ddkilzer)
Comment 3 2007-12-06 21:39:03 PST
mitz
Comment 4 2007-12-06 22:02:12 PST
Using Safari 3.0.4 (523.12) on Mac OS X 10.4.11 I get a page that tells me that my browser is incompatible with .Mac Web Gallery :-\
David Kilzer (:ddkilzer)
Comment 5 2007-12-07 04:32:27 PST
(In reply to comment #4) > Using Safari 3.0.4 (523.12) on Mac OS X 10.4.11 I get a page that tells me that > my browser is incompatible with .Mac Web Gallery :-\ I saw that intermittently when testing nightly revisions. Hmmm...guess it happens all the time with Safari 3.0.4 on Tiger. Works okay with Safari 3.0.4 on Leopard.
mitz
Comment 6 2007-12-07 07:11:24 PST
(In reply to comment #5) > (In reply to comment #4) > > Using Safari 3.0.4 (523.12) on Mac OS X 10.4.11 I get a page that tells me that > > my browser is incompatible with .Mac Web Gallery :-\ > > I saw that intermittently when testing nightly revisions. Hmmm...guess it > happens all the time with Safari 3.0.4 on Tiger. Works okay with Safari 3.0.4 > on Leopard. > I got it intermittently on some .Mac galleries regardless of the browser I was using. I've found another gallery where I could reproduce the problem and I know what's happening - something I've convinced myself couldn't happen when I wrote the original patch :-)
mitz
Comment 7 2007-12-07 08:59:07 PST
Created attachment 17771 [details] Test case You should see a green square (without having to resize the window or otherwise force relayout after the page loads).
mitz
Comment 8 2007-12-07 09:57:40 PST
Created attachment 17772 [details] Avoid re-entering scheduleRelayoutOfSubtree() No layout test regressions.
Darin Adler
Comment 9 2007-12-07 10:17:40 PST
Comment on attachment 17772 [details] Avoid re-entering scheduleRelayoutOfSubtree() r=me I am getting frustrated with the difficulty of understanding things like the second boolean to setChildNeedsLayout and the various constraints on what is and is not safe to call. We need to make some progress in clarity in the render tree code when viewed up close -- ideally we will get to the point where we can reason about the correctness of a fragment of code without having to constantly consider the big picture.
mitz
Comment 10 2007-12-07 10:27:28 PST
Note You need to log in before you can comment on or make changes to this bug.