WebCore:

Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=16334
          <rdar://problem/5634923> REGRESSION (r28299): Homepage of any DotMac Web Gallery won't load completely

        Test: fast/dynamic/subtree-no-common-root-static-y.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::markContainingBlocksForLayout): Changed the call
        to setChildNeedsLayout() to not mark containing blocks and added a
        separate call to markContainingBlocksForLayout() that will not schedule
        a layout if we are already in the middle of scheduleRelayoutOfSubtree().

LayoutTests:

        Reviewed by Darin Adler.

        - test for http://bugs.webkit.org/show_bug.cgi?id=16334
          <rdar://problem/5634923> REGRESSION (r28299): Homepage of any DotMac Web Gallery won't load completely

        * fast/dynamic/subtree-no-common-root-static-y.html: Added.
        * platform/mac/fast/dynamic/subtree-no-common-root-static-y-expected.checksum: Added.
        * platform/mac/fast/dynamic/subtree-no-common-root-static-y-expected.png: Added.
        * platform/mac/fast/dynamic/subtree-no-common-root-static-y-expected.txt: Added.



Canonical link: https://commits.webkit.org/22402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28519 268f45cc-cd09-0410-ab3c-d52691b4dbfc